able to query data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="login">Login</string>
     <string name="userName">UserName</string>
     <string name="password">password</string>
+    <string name="description">description</string>
+    <string name="takePhoto">Take Picture</string>
+    <string name="samplePhoto">Photo Sample</string>
+    <string name="submit">Submit</string>
 </resources>
