Able to sign up and log out

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="takePhoto">Take Picture</string>
     <string name="samplePhoto">Photo Sample</string>
     <string name="submit">Submit</string>
+    <string name="logout">Logout</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="instagram">Instagram</string>
 </resources>
