--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="logout">Logout</string>
     <string name="sign_up">Sign Up</string>
     <string name="instagram">Instagram</string>
+    <string name="instagram_logo">Instagram Logo</string>
 </resources>
