--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="sign_up">Sign Up</string>
     <string name="instagram">Instagram</string>
     <string name="instagram_logo">Instagram Logo</string>
-</resources>
+    <string name="home_button">Home button</string>
+    ]</resources>
