--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="instagram">Instagram</string>
     <string name="instagram_logo">Instagram Logo</string>
     <string name="home_button">Home button</string>
-    ]</resources>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    ]
+</resources>
